tests/templates/kfddistribution/00-disabled/baseline/manifests/monitoring/policies/kustomization.yaml
# Copyright (c) 2017-present SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.
---
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
  - common.yaml
  - prometheus-operator.yaml
  - kube-state-metrics.yaml
  - node-exporter.yaml
  - x509-exporter.yaml
  - blackbox-exporter.yaml
